Move test staff into common module

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -30,4 +30,8 @@ android {
 
 dependencies {
     implementation jetbrains.kotlin
+
+    implementation androidx.core
+
+    implementation androidx.test.espresso.idling
 }
