Finish with refactor SwitchButton.kt

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation jetbrains.kotlin
 
     implementation androidx.core
+    implementation androidx.appcompat
 
     implementation androidx.test.espresso.idling
 }
