Finish with refactor IconAnimControl.kt

--- a/iconanim/build.gradle
+++ b/iconanim/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation project(':common')
 
     implementation jetbrains.kotlin
+    implementation jetbrains.coroutines.core
 
     implementation androidx.appcompat
 }
