Create concept for ViewModelFactory.kt and apply it for SplashViewModel.kt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,8 +78,8 @@ android {
 }
 
 dependencies {
-    implementation project(":iconanim")
-    implementation project(":safedialog")
+    implementation project(':iconanim')
+    implementation project(':safedialog')
     implementation project(':common')
 
     //region Kotlin
