Fix crash in IconAnimControl.kt (change UI from ioScope)

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -30,6 +30,7 @@ android {
 
 dependencies {
     implementation jetbrains.kotlin
+    implementation jetbrains.coroutines.core
 
     implementation androidx.core
     implementation androidx.appcompat
