--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,7 @@ android {
 
 dependencies {
     implementation project(':iconanim')
-    implementation project(':safedialog')
+    implementation project(':safeDialog')
     implementation project(':common')
 
     //region Kotlin
