Rename module: iconanim -> iconAnim

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,7 @@ android {
 }
 
 dependencies {
-    implementation project(':iconanim')
+    implementation project(':iconAnim')
     implementation project(':safeDialog')
     implementation project(':common')
 
