--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.gradle_ver = '7.0.3'
-    ext.kotlin_ver = '1.6.10'
-
     repositories {
         google()
-        maven { url 'https://maven.google.com' }
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradle_ver"
+        classpath "com.android.tools.build:gradle:7.0.3"
 
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_ver"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"
 
-        classpath 'com.google.gms:google-services:4.3.5'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.2'
+        classpath 'com.google.gms:google-services:4.3.13'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.1'
     }
 }
 
 allprojects {
     repositories {
         google()
-        maven { url 'https://maven.google.com' }
-        jcenter()
         mavenCentral()
     }
 }
