--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
-apply plugin: 'com.android.application'
-
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
-
-apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.google.firebase.crashlytics'
+plugins {
+    id "com.android.application"
+    id "kotlin-android"
+    id "kotlin-kapt"
+    id "com.google.gms.google-services"
+    id "com.google.firebase.crashlytics"
+}
 
 apply from: '../values.gradle'
 
@@ -13,12 +13,12 @@ android {
 
     defaultConfig {
         applicationId "sgtmelon.scriptum"
-        minSdkVersion 21
-        targetSdkVersion 31
+        minSdk 21
+        targetSdk 31
         versionCode 23
         versionName git.version.windows.execute().text.trim()
 
-        testInstrumentationRunner androidx.test.instrumentationRunner
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         javaCompileOptions {
             annotationProcessorOptions {
@@ -30,28 +30,6 @@ android {
         buildConfigField "String", "MARKET_URL", '"market://details?id="'
         buildConfigField "String", "BROWSER_URL", '"https://play.google.com/sore/apps/details?id="'
         buildConfigField "String", "PRIVACY_POLICY_URL", '"https://drive.google.com/open?id=1f5tfXeBM6dxUqpsHW3SqMHa-mtKf5RSx"'
-
-        /**
-         * Use only in debug mode (in release minifyEnabled do the deal)
-         */
-//        multiDexEnabled true
-    }
-
-    testOptions {
-        unitTests.returnDefaultValues = true
-    }
-
-    buildFeatures {
-        dataBinding = true
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
     buildTypes {
@@ -73,6 +51,23 @@ android {
             buildConfigField "int", "INPUT_CONTROL_MAX_SIZE", '50'
         }
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
+    buildFeatures {
+        dataBinding = true
+    }
 }
 
 dependencies {
@@ -82,41 +77,48 @@ dependencies {
 
     //region Kotlin
 
-    implementation jetbrains.kotlin
-    implementation jetbrains.coroutines.core
-    implementation jetbrains.coroutines.android
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
+
+    // TODO why debugImplementation?
+    debugImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
 
     //endregion
 
-    implementation google.firebase.analytics
-    implementation google.firebase.crashlytics
+    //region Google
 
-    implementation google.material
+    implementation "com.google.firebase:firebase-analytics-ktx:20.1.0"
+    implementation "com.google.firebase:firebase-crashlytics-ktx:18.2.8"
 
-    implementation google.dagger.core
-    kapt google.dagger.compiler
+    implementation "com.google.android.material:material:1.5.0"
+
+    implementation "com.google.dagger:dagger:2.41"
+    kapt "com.google.dagger:dagger-compiler:2.41"
+
+    //endregion
 
     //region AndroidX
 
-    implementation androidx.core
+    implementation "androidx.core:core-ktx:1.7.0"
 
-    implementation androidx.lifecycle.extensions
-    implementation androidx.lifecycle.viewmodel
-    kapt androidx.lifecycle.compiler
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.4.1"
 
-    implementation androidx.room.runtime
-    implementation androidx.room.ktx
-    kapt androidx.room.compiler
-    testImplementation androidx.room.testing
+    implementation "androidx.room:room-runtime:2.4.1"
+    implementation "androidx.room:room-ktx:2.4.1"
+    kapt "androidx.room:room-compiler:2.4.1"
+    testImplementation "androidx.room:room-testing:2.4.1"
 
-    implementation androidx.preference
-    implementation androidx.appcompat
-    implementation androidx.cardview
-    implementation androidx.constraintlayout
-    implementation androidx.viewpager
+    implementation "androidx.preference:preference-ktx:1.2.0"
+    implementation "androidx.appcompat:appcompat:1.4.1"
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
-    implementation androidx.vector.drawable
-    implementation androidx.vector.animated
+    implementation "androidx.vectordrawable:vectordrawable:1.1.0"
+    implementation "androidx.vectordrawable:vectordrawable-animated:1.1.0"
 
     //endregion
 
@@ -124,25 +126,25 @@ dependencies {
 
     //region Testing
 
-//    debugImplementation other.leakcanary
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:2.6"
 
-    androidTestImplementation androidx.test.core
-    androidTestImplementation androidx.test.runner
-    androidTestImplementation androidx.test.rules
-    androidTestImplementation androidx.test.junit
+    androidTestImplementation "androidx.test:core-ktx:1.4.0"
+    androidTestImplementation "androidx.test:runner:1.4.0"
+    androidTestImplementation "androidx.test:rules:1.4.0"
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
 
-    androidTestImplementation androidx.test.espresso.core
-    androidTestImplementation androidx.test.espresso.contrib
-    androidTestImplementation androidx.test.uiautomator
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.4.0"
+
+    androidTestImplementation "androidx.test.uiautomator:uiautomator:2.2.0"
 
     // Exclude need for prevent bug: import org.hamcrest.Matchers - not found
     debugImplementation (junit.core) {
         exclude group: 'org.hamcrest'
     }
-    debugImplementation jetbrains.coroutines.test
 
-    testImplementation mockk.core
-    testImplementation json.core
+    testImplementation "io.mockk:mockk:1.12.2"
+    testImplementation "org.json:json:20211205"
 
     //endregion
     
