--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,7 +1,7 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-
-apply from: '../values.gradle'
+plugins {
+    id "com.android.library"
+    id "kotlin-android"
+}
 
 android {
     compileSdkVersion 31
@@ -14,11 +14,6 @@ android {
         buildConfigField "String", "DATE_FORMAT_DATE_MEDIUM", '"d MMM"'
     }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -26,14 +21,19 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation jetbrains.kotlin
-    implementation jetbrains.coroutines.core
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
 
-    implementation androidx.core
-    implementation androidx.appcompat
+    implementation "androidx.core:core-ktx:1.7.0"
+    implementation "androidx.appcompat:appcompat:1.4.1"
 
-    implementation androidx.test.espresso.idling
+    // TODO make only for androidTestImplementation
+    implementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
 }
