--- a/iconAnim/build.gradle
+++ b/iconAnim/build.gradle
@@ -1,7 +1,7 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-
-apply from: '../values.gradle'
+plugins {
+    id "com.android.library"
+    id "kotlin-android"
+}
 
 android {
     compileSdkVersion 31
@@ -27,8 +27,8 @@ android {
 dependencies {
     implementation project(':common')
 
-    implementation jetbrains.kotlin
-    implementation jetbrains.coroutines.core
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
 
-    implementation androidx.appcompat
+    implementation "androidx.appcompat:appcompat:1.4.1"
 }
