--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,7 +122,7 @@ dependencies {
 
     //endregion
 
-    implementation other.pageindicator
+    implementation "ru.tinkoff.scrollingpagerindicator:scrollingpagerindicator:1.2.1"
 
     //region Testing
 
@@ -138,6 +138,7 @@ dependencies {
 
     androidTestImplementation "androidx.test.uiautomator:uiautomator:2.2.0"
 
+    // TODO really need it?
     // Exclude need for prevent bug: import org.hamcrest.Matchers - not found
     debugImplementation (junit.core) {
         exclude group: 'org.hamcrest'
