--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,7 +140,7 @@ dependencies {
 
     // TODO really need it?
     // Exclude need for prevent bug: import org.hamcrest.Matchers - not found
-    debugImplementation (junit.core) {
+    debugImplementation ("androidx.test.ext:junit:1.1.3") {
         exclude group: 'org.hamcrest'
     }
 
