Move everything from old module into new (safeDialog in another directory)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,7 @@ android {
 
 dependencies {
     implementation project(':iconAnim')
-    implementation project(':safeDialog')
+    implementation project(':libraries:safeDialog')
     implementation project(':common')
 
     //region Kotlin
