--- a/libraries/iconAnim/build.gradle
+++ b/libraries/iconAnim/build.gradle
@@ -1,14 +1,14 @@
 plugins {
     id "com.android.library"
-    id "kotlin-android"
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    compileSdkVersion 31
+    compileSdk 32
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 31
+        minSdk 21
+        targetSdk 32
     }
 
     buildTypes {
@@ -27,7 +27,7 @@ android {
 dependencies {
     implementation project(':common')
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.21"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
 
     implementation "androidx.appcompat:appcompat:1.4.1"
