--- a/libraries/textDotAnim/build.gradle
+++ b/libraries/textDotAnim/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "com.android.library"
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
@@ -13,14 +13,18 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
 }
 
@@ -29,11 +33,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.21"
 
-    implementation "com.google.android.material:material:1.5.0"
-
-    implementation "androidx.appcompat:appcompat:1.4.1"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-
-    testImplementation "androidx.test.ext:junit:1.1.3"
-    testImplementation "io.mockk:mockk:1.12.2"
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
 }
