--- a/libraries/safeDialog/build.gradle
+++ b/libraries/safeDialog/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
     implementation "androidx.appcompat:appcompat:1.4.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0"
 
     testImplementation "androidx.test.ext:junit:1.1.3"
     testImplementation "io.mockk:mockk:1.12.2"
