--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ include ':app', ':common'
 include ':libraries:safeDialog'
 include ':libraries:iconAnim'
 include ':libraries:textDotAnim'
+include ':tests:common'
