--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ include ':libraries:safeDialog'
 include ':libraries:iconAnim'
 include ':libraries:textDotAnim'
 include ':tests:common'
+include ':tests:idling'
