--- a/tests/idling/build.gradle
+++ b/tests/idling/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "com.android.library"
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
@@ -15,8 +15,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 
@@ -31,10 +31,11 @@ android {
 }
 
 dependencies {
-    implementation project(':common')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.21"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
 
-    implementation "androidx.appcompat:appcompat:1.4.1"
+    implementation "androidx.transition:transition-ktx:1.4.1"
+
+    // TODO make only for androidTestImplementation
+    implementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
 }
