--- a/libraries/safeDialog/build.gradle
+++ b/libraries/safeDialog/build.gradle
@@ -9,6 +9,8 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 32
+
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
