--- a/libraries/textDotAnim/build.gradle
+++ b/libraries/textDotAnim/build.gradle
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-    implementation project(':common')
+    implementation project(':tests:idling')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.21"
 
