--- a/libraries/textDotAnim/build.gradle
+++ b/libraries/textDotAnim/build.gradle
@@ -33,7 +33,7 @@ android {
 dependencies {
     implementation project(':tests:idling')
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation "androidx.core:core-ktx:1.8.0"
+    implementation "androidx.appcompat:appcompat:1.5.0"
+    implementation "com.google.android.material:material:1.6.1"
 }
