--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include ':libraries:iconAnim'
 include ':libraries:textDotAnim'
 include ':tests:common'
 include ':tests:idling'
+include ':tests:cappuccino'
