Create :libraries:extensions module

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include ':libraries:textDotAnim'
 include ':tests:common'
 include ':tests:idling'
 include ':tests:cappuccino'
+include ':libraries:extensions'
