--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,9 +75,10 @@ dependencies {
     implementation project(':libraries:iconAnim')
     implementation project(':libraries:safeDialog')
     implementation project(':libraries:textDotAnim')
+    implementation project(':libraries:extensions')
     implementation project(':common')
-    implementation project(':tests:idling')
 
+    implementation project(':tests:idling')
     testImplementation project(path: ':tests:common')
     androidTestImplementation project(path: ':tests:common')
     androidTestImplementation project(path: ':tests:cappuccino')
@@ -106,7 +107,7 @@ dependencies {
 
     //region AndroidX
 
-    implementation "androidx.core:core-ktx:1.8.0"
+    implementation "androidx.core:core-ktx:1.9.0"
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
@@ -118,7 +119,7 @@ dependencies {
     testImplementation "androidx.room:room-testing:2.4.3"
 
     implementation "androidx.preference:preference-ktx:1.2.0"
-    implementation "androidx.appcompat:appcompat:1.5.0"
+    implementation "androidx.appcompat:appcompat:1.5.1"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation "androidx.viewpager2:viewpager2:1.0.0"
