--- a/libraries/extensions/build.gradle
+++ b/libraries/extensions/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "com.android.library"
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
@@ -15,8 +15,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 
@@ -31,10 +31,7 @@ android {
 }
 
 dependencies {
-    implementation project(':common')
-    implementation project(':libraries:extensions')
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
-
+    implementation "androidx.core:core-ktx:1.9.0"
     implementation "androidx.appcompat:appcompat:1.5.1"
 }
