--- a/libraries/safeDialog/build.gradle
+++ b/libraries/safeDialog/build.gradle
@@ -32,6 +32,7 @@ android {
 
 dependencies {
     implementation project(':common')
+    implementation project(':libraries:extensions')
     testImplementation project(path: ':tests:common')
 
     implementation "com.google.android.material:material:1.6.1"
