--- a/tests/cappuccino/build.gradle
+++ b/tests/cappuccino/build.gradle
@@ -31,6 +31,7 @@ android {
 }
 
 dependencies {
+    implementation project(':libraries:extensions')
 
     implementation "androidx.test.ext:junit:1.1.3"
     implementation "androidx.test.espresso:espresso-core:3.4.0"
