--- a/tests/common/build.gradle
+++ b/tests/common/build.gradle
@@ -31,6 +31,7 @@ android {
 }
 
 dependencies {
+    implementation project(':libraries:extensions')
 
     implementation "androidx.test:core-ktx:1.4.0"
     implementation "androidx.test.ext:junit:1.1.3"
