--- a/tests/cappuccino/build.gradle
+++ b/tests/cappuccino/build.gradle
@@ -35,4 +35,6 @@ dependencies {
 
     implementation "androidx.test.ext:junit:1.1.3"
     implementation "androidx.test.espresso:espresso-core:3.4.0"
+
+    implementation "androidx.test.uiautomator:uiautomator:2.2.0"
 }
