--- a/tests/cappuccino/build.gradle
+++ b/tests/cappuccino/build.gradle
@@ -33,6 +33,10 @@ android {
 dependencies {
     implementation project(':libraries:extensions')
 
+    implementation "androidx.core:core-ktx:1.8.0"
+    implementation "androidx.appcompat:appcompat:1.5.1"
+    implementation "com.google.android.material:material:1.6.1"
+
     implementation "androidx.test.ext:junit:1.1.3"
     implementation "androidx.test.espresso:espresso-core:3.4.0"
 
