--- a/libraries/safeDialog/build.gradle
+++ b/libraries/safeDialog/build.gradle
@@ -33,6 +33,8 @@ android {
 dependencies {
     implementation project(':common')
     implementation project(':libraries:extensions')
+    implementation project(':tests:prod')
+
     testImplementation project(path: ':tests:common')
 
     implementation "com.google.android.material:material:1.6.1"
