--- a/tests/idling/build.gradle
+++ b/tests/idling/build.gradle
@@ -36,4 +36,6 @@ dependencies {
 
     // TODO make only for androidTestImplementation
     implementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
+
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 }
