Write test for MenuPreferenceViewModelImplTest.kt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,7 +151,8 @@ dependencies {
         exclude group: 'org.hamcrest'
     }
 
-    testImplementation "io.mockk:mockk:1.12.2"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "io.mockk:mockk:1.12.4"
     testImplementation "org.json:json:20211205"
 
     //endregion
