--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="sgtmelon.scriptum">
 
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <!--
+          WRITE_EXTERNAL STORAGE implies READ_EXTERNAL_STORAGE, so you only need one of those,
+          not both
+    -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <!--  It implies READ_EXTERNAL_STORAGE, so you only need one of those, not both  -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".presentation.screen.ui.ScriptumApplication"
@@ -23,6 +26,7 @@
         <activity
             android:name=".presentation.screen.ui.impl.SplashActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="true"
             android:theme="@style/App.Screen.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,6 +37,7 @@
         <activity
             android:name=".presentation.screen.ui.impl.intro.IntroActivity"
             android:configChanges="keyboardHidden"
+            android:exported="true"
             android:parentActivityName=".presentation.screen.ui.impl.SplashActivity"
             android:theme="@style/App.Screen.Intro">
             <intent-filter>
@@ -43,6 +48,7 @@
 
         <activity
             android:name=".presentation.screen.ui.impl.main.MainActivity"
+            android:exported="true"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -57,6 +63,7 @@
         -->
         <activity
             android:name=".presentation.screen.ui.impl.note.NoteActivity"
+            android:exported="false"
             android:configChanges="orientation|screenSize"
             android:parentActivityName=".presentation.screen.ui.impl.main.MainActivity">
             <intent-filter>
@@ -68,6 +75,7 @@
         <activity
             android:name=".presentation.screen.ui.impl.preference.PreferenceActivity"
             android:configChanges="keyboardHidden"
+            android:exported="true"
             android:parentActivityName=".presentation.screen.ui.impl.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -78,6 +86,7 @@
         <activity
             android:name=".presentation.screen.ui.impl.preference.help.HelpDisappearActivity"
             android:configChanges="keyboardHidden"
+            android:exported="true"
             android:parentActivityName=".presentation.screen.ui.impl.preference.PreferenceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -88,6 +97,7 @@
         <activity
             android:name=".presentation.screen.ui.impl.preference.develop.PrintDevelopActivity"
             android:configChanges="keyboardHidden"
+            android:exported="true"
             android:parentActivityName=".presentation.screen.ui.impl.preference.PreferenceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -98,6 +108,7 @@
         <activity
             android:name=".presentation.screen.ui.impl.notification.NotificationActivity"
             android:configChanges="keyboardHidden"
+            android:exported="true"
             android:parentActivityName=".presentation.screen.ui.impl.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -108,6 +119,7 @@
         <activity
             android:name=".presentation.screen.ui.impl.notification.AlarmActivity"
             android:configChanges="keyboardHidden"
+            android:exported="true"
             android:parentActivityName=".presentation.screen.ui.impl.main.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -127,6 +139,7 @@
 
         <receiver
             android:name=".presentation.receiver.BootReceiver"
+            android:exported="false"
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
