Update privacy policy url

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
         buildConfigField "String", "DB_NAME", '"HandyNotes"'
         buildConfigField "String", "MARKET_URL", '"market://details?id="'
         buildConfigField "String", "BROWSER_URL", '"https://play.google.com/sore/apps/details?id="'
-        buildConfigField "String", "PRIVACY_POLICY_URL", '"https://drive.google.com/open?id=1f5tfXeBM6dxUqpsHW3SqMHa-mtKf5RSx"'
+        buildConfigField "String", "PRIVACY_POLICY_URL", '"https://github.com/SerjantArbuz/Scriptum/blob/master/PrivacyPolicy.md"'
 
         /**
          * Use only in debug mode (in release minifyEnabled do the deal)
