--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,7 @@ android {
         }
 
         buildConfigField "String", "DB_NAME", '"HandyNotes"'
-        buildConfigField "String", "MARKET_URL", '"market://details?id="'
-        buildConfigField "String", "BROWSER_URL", '"https://play.google.com/sore/apps/details?id="'
+        buildConfigField "String", "BROWSER_URL", '"https://play.google.com/store/apps/details?id=sgtmelon.scriptum"'
         buildConfigField "String", "PRIVACY_POLICY_URL", '"https://github.com/SerjantArbuz/Scriptum/blob/master/PrivacyPolicy.md"'
     }
 
