--- a/libraries/iconAnim/build.gradle
+++ b/libraries/iconAnim/build.gradle
@@ -34,5 +34,5 @@ dependencies {
     implementation project(':libraries:extensions')
 
     implementation "androidx.appcompat:appcompat:1.5.1"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
 }
