--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,8 +131,16 @@ dependencies {
 
     androidTestImplementation "androidx.test.uiautomator:uiautomator:2.2.0"
 
-    // TODO really need it?
-    // Exclude need for prevent bug: import org.hamcrest.Matchers - not found
+    /**
+     * Exclude need for prevent bug inside UI tests: import org.hamcrest.Matchers - not found.
+     *
+     * 22.12.02 Still get errors:
+     * java.lang.IncompatibleClassChangeError: Class 'androidx.test.espresso.action.Tap$1' does
+     *      not implement interface 'org.hamcrest.SelfDescribing' in call to
+     *      'void org.hamcrest.SelfDescribing.describeTo(org.hamcrest.Description)'
+     *      (declaration of 'org.hamcrest.BaseDescription' appears in
+     *      /data/app/sgtmelon.scriptum.debug.test-Wu4cxM0zbyT6kVazwdMK7A==/base.apk)
+     */
     debugImplementation ("androidx.test.ext:junit:1.1.4") {
         exclude group: 'org.hamcrest'
     }
